Update SMS 2.x installation package download link from GitHub

--- a/manual/install_guide.html
+++ b/manual/install_guide.html
@@ -33,7 +33,7 @@
           <tr><td colspan=2>&nbsp;</td></tr>          
           <tr>
             <td valign=top nowrap>(2) </td>
-            <td>Download a zipped archive named sms2_master.zip from https://github.com/dw999/sms2, and then decompress it with command: <b>unzip sms2_master.zip</b></td>
+            <td>Download a zipped archive from <b>https://github.com/dw999/sms2/archive/refs/heads/main.zip</b>, and then decompress it with command: <b>unzip main.zip</b></td>
           </tr>          
           </table>  
         </td>
